# protocol-checker

./: .env.example  .gitignore  Dockerfile  README.md  RENDER_DEPLOY.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 9997b457da35_initial_schema.py
app/: config.py  dependencies.py  main.py
app/agents/: __init__.py  orchestrator.py  state.py
app/agents/nodes/: __init__.py  memory_agent.py  protocol_agent.py  recommendation_agent.py  research_agent.py  safety_agent.py  tracking_agent.py  troubleshooting_agent.py
app/agents/tools/: __init__.py  calculation_tools.py  experiment_tools.py  retrieval_tools.py  safety_tools.py
app/api/: __init__.py  router.py
app/api/endpoints/: __init__.py  auth.py  chat.py  experiments.py  health.py  memory.py  protocols.py
app/api/middleware/: __init__.py  error_handler.py  (+1 more)
app/core/: __init__.py  auth.py  embeddings.py  exceptions.py  llm.py
app/ingestion/: __init__.py  chunker.py  embedding_generator.py  metadata_extractor.py  pdf_parser.py  pipeline.py
app/memory/: __init__.py  episodic_memory.py  manager.py  persistent_memory.py  semantic_memory.py  working_memory.py
app/models/: __init__.py  database.py  enums.py  schemas.py
app/retrieval/: __init__.py  bm25_retriever.py  compressor.py  hybrid_retriever.py  multi_query.py  pipeline.py  reranker.py  vector_retriever.py
app/services/: __init__.py  chat_service.py  experiment_service.py  protocol_service.py  recommendation_service.py
app/utils/: __init__.py  constants.py  lab_calculations.py  prompts.py  text_cleaning.py
frontend/src/: App.css  App.tsx  index.css
scratch/: list_models.py  test_embeddings.py
scripts/: init_pinecone.py  run_dev.py  seed_protocols.py
tests/: test_auth_headers.py  test_auth_jwt.py  test_config.py  test_cors.py
(+11 files in other folders)
